# daq-hq-code

./: .gitignore  CMakeLists.txt  README.md  build.sh
consumer/: Consumer.cpp  Consumer.h  ConsumerServer.cpp  ConsumerServer.h
docker/: dockerfile  dockerfile_cpp_libraries  dockerfile_cpp_tool_chain
log/: log.h
message/: IDataMessage.h  IMultiDataMessage.h  IsDataMessageSequence.h  RequestMessage.h  RequestMessage.pb.h  data_message.h  request_message.pb.h
message_sink/: message_sink.h
message_source/: message_source.h
producer/: Producer.h  ProducerServer.h
proto/: RequestMessage.proto  request_message.proto
src/: IDataMessage.cpp  IMultiDataMessage.cpp  ProducerServer.cpp  RequestMessage.cpp  RequestMessage.pb.cc  data_message.cpp  request_message.pb.cc  utils.cpp
tests/: ConsuemrTest.cpp  DemoSource.cpp  FaultSink1.cpp  FaultSink2.cpp  IDataMessageTest.cpp  LogTest.cpp  MessageSinkTest.cpp  MessageSourceTest.cpp  ProducerTest.cpp  RequestMessageTest.cpp  TestDataMessage.h
utils/: utils.h
